# pymeshzork

./: .gitignore  README.md  SPECIFICATION.md  pyproject.toml
data/worlds/classic_zork/: objects.json  rooms.json  world.json
docs/: CNAME  index.html
pymeshzork/: __init__.py  cli.py  config.py
pymeshzork/accounts/: __init__.py  commands.py  database.py  manager.py  models.py
pymeshzork/data/: __init__.py  loader.py
pymeshzork/data/schemas/: world.schema.json
pymeshzork/editor/: __init__.py  main.py  main_window.py  map_canvas.py  object_editor.py  room_editor.py  world_model.py
pymeshzork/engine/: __init__.py  events.py  game.py  models.py  parser.py  room_actions.py  state.py  verbs.py  world.py
pymeshzork/meshtastic/: __init__.py  client.py  hybrid_transport.py  lora_client.py  mqtt_client.py  multiplayer.py  native_client.py  oled_display.py  presence.py  protocol.py  serial_client.py
pymeshzork/save/: __init__.py  persistence.py
scripts/: setup_pi_lora.sh  test_mesh_multiplayer.py  test_oled_display.py
tests/: __init__.py  test_accounts.py  test_engine.py  test_meshtastic.py
tools/: extract_zork_data.py  extracted_zork.json  generate_gamedata.py
